			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

=================================
VERSION 5.6.27 (January 26, 2007)
=================================

  * ENHANCED: atom-reference management.

  * FIXED: 64-bit integer handling on machines with alignment
    conditions.  David Gray.

  * FIXED: Various size_t related issues.  With help from Richard O'Keefe.

  * FIXED: Alignment problem on 32-bit hardware demanding strict alignment.
    (HPUX on IA64).  David Gray.

=================================
VERSION 5.6.26 (January 19, 2007)
=================================

  * Updated documentation.

  * FIXED: Control-C <abort> keeps ringing the bell.  Ulrich Neumerkel.

  * FIXED: A is "c" for Unicode characters.

  * PORT/MODIFIED: Massive changes in type handling, preparing
    for Win64 and improving type-safety on other -notably 64-bit- platforms.

    All text+length C interface functions now use the type size_t.  This
    causes portability problems on 64-bit code.  Compile your program with all
    warnings enabled and fix messages concerning type-size issues.  Code
    is binary compatible on 32-bit systems.

  * FIXED: Proper error on erase on clause of static predicate.  Solly
    Brown.

  * MODIFIED: Add ',' between lines in answer substitution.  Ulrich Neumerkel.

  * ADDED: option priority(P) to write_term/3.  Use this in writing
    answer substitutions.  Ulrigh Neumerkel.

  * FIXED: Overflow issues in arithmetic left shift (<<).  Ulrich Neumerkel.

  * FIXED: float_fractional_part function for integers.  See mailinglist.

==================================
VERSION 5.6.25 (December 21, 2006)
==================================

  * FIXED: nth0(nth0(2, [a,b,c|_], x).  Ryszard Szopa.
