@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ADDED: max_threads flag.  Paulo Moura.
+
 =================================
 VERSION 5.6.27 (January 26, 2007)
 =================================
